Update Unit Test- Sonarcloud - Docker Hub
