# src/main/resources/openapi.yml
@@ -37,18 +37,18 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Account'
-  /account/restartTransactions:
-    put:
-      tags:
-        - account-controller
-      operationId: restartTransactions
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Message'
+#  /account/restartTransactions:
+#    put:
+#      tags:
+#        - account-controller
+#      operationId: restartTransactions
+#      responses:
+#        '200':
+#          description: OK
+#          content:
+#            '*/*':
+#              schema:
+#                $ref: '#/components/schemas/Message'
   /account/withdrawal:
     post:
       tags:
